--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -22,4 +22,7 @@
     <color name="theme_primary_dark">#388E3C</color>
     <color name="theme_accent">#448AFF</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="primaryText">#212121</color>
+    <color name="secondaryText">#757575</color>
+    <color name="divider">#BDBDBD</color>
 </resources>
