--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -3,7 +3,7 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    android:background="?selectableItemBackground">
 
     <!--suppress AndroidLintContentDescription -->
     <com.example.xyzreader.ui.DynamicHeightNetworkImageView
