--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -7,11 +7,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-   <!-- <FrameLayout
+    <FrameLayout
         android:id="@+id/up_container"
         android:background="@android:color/transparent"
+        android:layout_marginTop="24dp"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
+        android:layout_height="wrap_content">
 
         <ImageButton
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -21,5 +22,5 @@
             android:background="?selectableItemBackgroundBorderless"
             android:contentDescription="@string/up"
             android:src="@drawable/ic_arrow_back" />
-    </FrameLayout>-->
+    </FrameLayout>
 </FrameLayout>
