--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_detail"
         android:layout_width="match_parent"
@@ -36,11 +38,11 @@
                 android:layout_marginTop="24dp"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:layout_collapseMode="pin">
-
                 <TextView
                     android:id="@+id/toolbar_detail_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="72dp"
                     android:layout_marginEnd="16dp"
                     android:alpha="0"
                     android:ellipsize="end"
@@ -51,6 +53,8 @@
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
+
+
 
     </android.support.design.widget.AppBarLayout>
 
