task: Corrigido  margintop toolbar para android versão 19.

--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -4,8 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_detail"
         android:layout_width="match_parent"
@@ -35,27 +33,23 @@
                 android:id="@+id/toolbar_detail"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/margin_top_status_bar"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:layout_collapseMode="pin">
+
                 <TextView
                     android:id="@+id/toolbar_detail_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="72dp"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginStart="72dp"
                     android:alpha="0"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
-
             </android.support.v7.widget.Toolbar>
-
         </android.support.design.widget.CollapsingToolbarLayout>
-
-
-
     </android.support.design.widget.AppBarLayout>
 
     <ScrollView
@@ -67,7 +61,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -112,12 +106,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right|end"
         android:layout_margin="16dp"
+        android:background="?selectableItemBackground"
         android:src="@drawable/ic_share"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
-        app:pressedTranslationZ="12dp"
-        android:background="?selectableItemBackground"/>
+        app:pressedTranslationZ="12dp" />
 
 </android.support.design.widget.CoordinatorLayout>
 
