--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -10,7 +10,7 @@
     <FrameLayout
         android:id="@+id/up_container"
         android:background="@android:color/transparent"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/margin_top_status_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
