--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -20,6 +20,7 @@
 
             <com.example.xyzreader.ui.ThreeTwoImageView
                 android:id="@+id/photo"
+                android:contentDescription="@string/photo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop" />
