--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -2,12 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_margin="10dp"
     android:background="?selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     app:cardCornerRadius="2dp"
-    app:elevation="4dp">
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:id="@+id/card_article"
